[package]
name = "tweet-getter"
version = "0.1.0"
authors = ["nakamurus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.126"
dotenv = "0.15.0"
serde_derive = "1.0.126"
serde_json = "1.0.64"
lindera = "0.7.1"
lindera-core = "0.7.1"
regex = "1.5.4"